--- a/resources/assets/sass/icons/_variables.scss
+++ b/resources/assets/sass/icons/_variables.scss
@@ -4,7 +4,7 @@
 $icons8-css-prefix: "icons8";
 $icons8-font-name: "Sport-Coach-Finder";
 $icons8-font-path: "/fonts";
-$icons8-version: "6";
+$icons8-version: "7";
 
 $icons8-var-black-twitter-logo: "\f109";
 $icons8-var-caret-arrowhead-facing-down: "\f107";
@@ -14,6 +14,8 @@ $icons8-var-clipboard-checklist: "\f12b";
 $icons8-var-close-button: "\f114";
 $icons8-var-coach: "\f100";
 $icons8-var-dashboard: "\f11f";
+$icons8-var-delete: "\f131";
+$icons8-var-edit: "\f132";
 $icons8-var-email-envelope: "\f10c";
 $icons8-var-facebook: "\f10a";
 $icons8-var-gender-neutral-user: "\f112";
