--- a/public/css/app.css
+++ b/public/css/app.css
@@ -604,8 +604,8 @@ template {
 
 @font-face {
   font-family: "Sport-Coach-Finder";
-  src: url(/fonts/icons.eot?v=6);
-  src: url(/fonts/icons.eot?#iefix) format("embedded-opentype"), url(/fonts/icons.woff2?v=6) format("woff2"), url(/fonts/icons.woff?v=6) format("woff"), url(/fonts/icons.ttf?v=6) format("truetype"), url(/fonts/icons.svg?v=6#Sport-Coach-Finder) format("svg");
+  src: url(/fonts/icons.eot?v=7);
+  src: url(/fonts/icons.eot?#iefix) format("embedded-opentype"), url(/fonts/icons.woff2?v=7) format("woff2"), url(/fonts/icons.woff?v=7) format("woff"), url(/fonts/icons.ttf?v=7) format("truetype"), url(/fonts/icons.svg?v=7#Sport-Coach-Finder) format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -613,7 +613,7 @@ template {
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
 @font-face {
     font-family: "Sport-Coach-Finder";
-    src: url(/fonts/icons.svg?v=6#Sport-Coach-Finder) format("svg");
+    src: url(/fonts/icons.svg?v=7#Sport-Coach-Finder) format("svg");
 }
 }
 
@@ -1096,6 +1096,38 @@ i.website-icon:after {
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   content: "\F128";
+}
+
+i.edit-icon:after {
+  display: inline-block;
+  font-family: "Sport-Coach-Finder";
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  line-height: 1;
+  text-decoration: inherit;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  content: "\F132";
+}
+
+i.delete-icon:after {
+  display: inline-block;
+  font-family: "Sport-Coach-Finder";
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  line-height: 1;
+  text-decoration: inherit;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  content: "\F131";
 }
 
 @-webkit-keyframes fadeIn {
