--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -14,3 +14,4 @@
 // === Components ===
 @import "components/admin/side-menu";
 @import "components/admin/panel";
+@import "components/admin/table";
