--- a/resources/assets/sass/components/admin/panel.scss
+++ b/resources/assets/sass/components/admin/panel.scss
@@ -52,13 +52,24 @@
 	}
 
 	@include has('footer') {
-		padding: 1.8rem 2.3rem;
+		padding: 1.3rem 2.3rem;
 		background: #eee;
-		
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+
 		.copyright {
 			font-size: .9rem;
 			font-weight: 500;
 			color: #5c5c5c;
+		}
+
+		.developer {
+			font-size: .75rem;
+			font-weight: 500;
+			color: $theme-primary;
+			margin: .3rem 0;
+			opacity: 0.7;
 		}
 	}
 }
