--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -117,6 +117,20 @@ button {
 	pointer-events: none !important;
 }
 
+.swal-button--confirm {
+	border-radius: 6px;
+	background-color: $theme-primary;
+	text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.11);
+}
+
+.swal-button--danger {
+	border-radius: 6px;
+	background-color: #d44444;
+	text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.11);
+}
+
 /**
  Pace loader styles.
 */
