--- a/resources/assets/sass/components/admin/panel.scss
+++ b/resources/assets/sass/components/admin/panel.scss
@@ -81,15 +81,55 @@
 	min-height: 120px;
 	border-radius: 8px;
 	padding: 1.5rem 2.1rem;
+	position: relative;
+	margin: .5rem 0;
 
 	@include has('content') {
 
 	}
+
+	&.center {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	@include has('banner') {
+		@include as('avatar') {
+			position: absolute;
+			left: 0;
+			top: -50px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 100%;
+
+			.avatar {
+				width: 100px;
+				height: 100px;
+
+				img {
+					width: 100%;
+					height: 100%;
+					border-radius: 50%;
+					box-shadow: 0 5px 35px rgba(0, 0, 0, 0.1);
+				}
+			}
+
+			& + .card__content {
+				margin-top: 1rem;
+			}
+		}
+	}
+}
+
+.form-wrapper {
+	position: relative;
 }
 
 .form {
 	display: flex;
 	flex-direction: column;
+	position: relative;
 
 	@include has('input') {
 		display: flex;
@@ -101,6 +141,7 @@
 			font-weight: 700;
 			margin-right: .5rem;
 			display: inline-block;
+			color: #777;
 
 			&[required] {
 				&:after {
@@ -170,6 +211,12 @@
 		}
 	}
 
+	@include has('submit-wrapper') {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
 	@include has('submit') {
 		background: linear-gradient(110deg, $theme-primary, $theme-primary-light);
 		border-radius: 28px;
@@ -178,5 +225,6 @@
 		padding: .6rem .8rem;
 		margin: .5rem;
 		color: #fff;
+		width: 220px;
 	}
 }
