--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -131,6 +131,10 @@ button {
 	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.11);
 }
 
+.vue-avatar--wrapper {
+	pointer-events: none;
+}
+
 /**
  Pace loader styles.
 */
