Fix avatar url storage path

--- a/resources/assets/sass/icons/_variables.scss
+++ b/resources/assets/sass/icons/_variables.scss
@@ -4,7 +4,7 @@
 $icons8-css-prefix: "icons8";
 $icons8-font-name: "Sport-Coach-Finder";
 $icons8-font-path: "/fonts";
-$icons8-version: "7";
+$icons8-version: "8";
 
 $icons8-var-black-twitter-logo: "\f109";
 $icons8-var-caret-arrowhead-facing-down: "\f107";
@@ -42,6 +42,7 @@ $icons8-var-settings-button: "\f11e";
 $icons8-var-shutdown: "\f11a";
 $icons8-var-social-group: "\f129";
 $icons8-var-survey: "\f121";
+$icons8-var-upload-to-the-cloud: "\f134";
 $icons8-var-warning: "\f11b";
 $icons8-var-web-design: "\f128";
 $icons8-var-wheelchair: "\f115";
