--- a/resources/assets/sass/components/nav-bar.scss
+++ b/resources/assets/sass/components/nav-bar.scss
@@ -147,16 +147,12 @@
 
 		@include has('avatar') {
 			cursor: pointer;
-			margin: .2rem;
 			overflow: hidden;
 			box-shadow: 0 0 18px rgba(0, 0, 0, 0.22);
 			border-radius: 50%;
-
-			img {
-				width: 46px;
-				height: 46px;
-				pointer-events: none;
-			}
+			display: flex;
+			justify-content: center;
+			align-items: center;
 		}
 
 		@include has('name') {
@@ -264,23 +260,21 @@
 						margin: 1.2rem 0 .8rem;
 						width: 75px;
 						height: 75px;
-						border-radius: 14px;
+						border-radius: 10px;
 						overflow: hidden;
 						box-shadow: 0 0 17px rgba(#000, 0.25);
-
-						img {
-							width: 100%;
-							height: 100%;
-						}
+						display: flex;
+						justify-content: center;
+						align-items: center;
 					}
 
-					strong {
+					> strong {
 						color: #fff;
 						font-size: 1.25rem;
 						font-weight: bold;
 					}
 
-					span {
+					> span {
 						margin: .4rem 0;
 						font-size: 1rem;
 						color: #d9d9d9;
