--- a/resources/assets/sass/components/admin/panel.scss
+++ b/resources/assets/sass/components/admin/panel.scss
@@ -74,6 +74,21 @@
 	}
 }
 
+.cards-2 {
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+
+	> .card {
+		flex: 1;
+		width: 100%;
+
+		&:first-of-type {
+			margin-right: 1.2rem !important;
+		}
+	}
+}
+
 .card {
 	max-width: 800px;
 	background: #fff;
@@ -94,14 +109,15 @@
 	}
 
 	@include has('banner') {
+		left: 0;
+		width: 100%;
+
 		@include as('avatar') {
 			position: absolute;
-			left: 0;
 			top: -50px;
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			width: 100%;
 
 			.avatar {
 				width: 100px;
@@ -117,6 +133,16 @@
 
 			& + .card__content {
 				margin-top: 1rem;
+			}
+		}
+
+		@include as('heading') {
+			padding: .65rem 0;
+
+			span {
+				font-size: 1.33rem;
+				font-weight: 600;
+				color: #555;
 			}
 		}
 	}
@@ -152,16 +178,28 @@
 		}
 
 		input.text-input {
+
+		}
+
+		.textarea-input {
+			resize: none;
+			min-height: 80px;
+		}
+
+		.text-input, .textarea-input {
 			background: #f6f6f6;
-			font-size: 1.15rem;
+			font-size: 1.02rem;
 			padding: .5rem 1rem;
 			margin: .5rem 0;
-			border-radius: 8px;
-			transition: background-color ease-in-out .22s, border ease .25s;
-			will-change: background, border;
+			border-radius: 12px;
+			border: 1px solid transparent;
+			transition: background-color ease-in-out .22s, border ease .25s, box-shadow ease-in-out .2s;
+			will-change: background, border, box-shadow;
 
 			&:focus {
 				background: #efefef;
+				border-color: rgba($theme-primary, 0.35);
+				box-shadow: 0 6px 32px rgba(0, 0, 0, .065);
 			}
 		}
 
@@ -200,7 +238,7 @@
 			align-items: center;
 
 			.label {
-				width: 80px;
+				width: 100px;
 			}
 		}
 
@@ -226,5 +264,11 @@
 		margin: .5rem;
 		color: #fff;
 		width: 220px;
+	}
+}
+
+@media screen and (max-width: 1000px) {
+	.cards-2 {
+		flex-direction: column;
 	}
 }
