--- a/resources/assets/sass/auth.scss
+++ b/resources/assets/sass/auth.scss
@@ -103,10 +103,12 @@ body {
 		align-items: center;
 		width: 100%;
 		//min-height: calc(100vh - 1.8rem - 103px);
-		margin: 6rem .5rem 0 5rem;
+		margin: 2rem .5rem 0 5rem;
 	}
 
 	@include has('panel') {
+		width: calc(100% - 11rem);
+
 		@include has('form') {
 			position: relative;
 		}
@@ -128,6 +130,7 @@ body {
 
 		@include has('greeting') {
 			padding: 2rem 4rem 3rem 0;
+			//text-align: center;
 
 			h3 {
 				color: #989898;
