--- a/resources/assets/sass/components/admin/side-menu.scss
+++ b/resources/assets/sass/components/admin/side-menu.scss
@@ -11,7 +11,7 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
-	overflow: hidden;
+	overflow-x: hidden;
 	z-index: 999;
 	box-shadow: 8px 0 20px rgba(0, 0, 0, 0.15);
 
@@ -116,6 +116,10 @@
 			z-index: 1;
 			transform: translateX(2rem);
 			margin: 0.25rem 0;
+
+			&:last-of-type {
+				margin-top: 1rem;
+			}
 
 			&:before {
 				content: '';
