Finish searching implementation

--- a/resources/assets/sass/components/admin/panel.scss
+++ b/resources/assets/sass/components/admin/panel.scss
@@ -278,7 +278,7 @@
 		.search {
 			width: 10rem;
 			border-radius: 2rem;
-			background: #f2f2f2;
+			background: #ededed;
 			position: relative;
 			display: flex;
 			justify-content: space-around;
