--- a/resources/assets/sass/components/admin/table.scss
+++ b/resources/assets/sass/components/admin/table.scss
@@ -32,6 +32,12 @@
 		border-radius: 8px;
 		transition: background ease-in-out .19s;
 
+		[data-markjs] {
+			background: #ebea99;
+			color: #222;
+			vertical-align: top;
+		}
+		
 		&:hover {
 			background: transparent;
 		}
@@ -143,13 +149,13 @@
 				flex-direction: column;
 				align-items: flex-start;
 
-				strong {
+				> strong {
 					font-size: 1.2rem;
 					font-weight: bold;
 					color: #333;
 				}
 
-				span {
+				> span {
 					font-size: 0.9rem;
 					font-weight: 500;
 					color: #8f8f8f;
