--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -271,6 +271,11 @@ button {
 	width: 40px;
 }
 
+span.flatpickr-day.selected {
+	background: $theme-primary !important;
+	border-color: $theme-primary !important;
+}
+
 /*!
  * Waves v0.7.6
  * http://fian.my.id/Waves
